# deep_generative_models

./: .gitignore  README.md  build_model.ipynb  dataset.py  pyproject.toml  requirements.txt  sampling.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  build_model-checkpoint.ipynb
config/: paths.py
deep_generative_models/: config.toml  dataset.py  inference.py  model.py  model_cnn.py  model_mashood.py  train.py  train_config.toml
deep_generative_models/.ipynb_checkpoints/: train-checkpoint.py
notebooks/: 1_data_exploration.ipynb  5_analysis.ipynb  build_model.ipynb  data_exploration.ipynb  global_stats.csv  svd_analysis.ipynb  test.ipynb
