[tool.poetry]
name = "deep-generative-models"
version = "0.1.0"
description = ""
authors = ["wideraHannes <jowid100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.2.2"
numpy = "1.26.4"
h5py = "^3.12.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
torchvision = "0.2.0"
pillow = "^11.0.0"
tqdm = "^4.67.0"
tomli = "==2.1.0"
torchinfo = "==1.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
